[tool.poetry]
name = "uhttp"
version = "2.0.0"
description = "Pythonic Web Development"
authors = ["gus <0x67757300@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/0x67757300/uHTTP"
keywords = ["asgi", "web", "http"]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.3"
pytest-sugar = "^1.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["tests.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
